// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Seo con titulo render Seo con imagen 1`] = `
[
  <title>
    Con imagen | Site metadata title
  </title>,
  <meta
    content="Site metadata description"
    name="description"
  />,
  <meta
    content="Con imagen"
    property="og:title"
  />,
  <meta
    content="Site metadata description"
    property="og:description"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="Stub para el alt de imagen"
    property="og:image:alt"
  />,
  <meta
    content="summary"
    name="twitter:card"
  />,
  <meta
    content=""
    name="twitter:creator"
  />,
  <meta
    content="Con imagen"
    name="twitter:title"
  />,
  <meta
    content="Site metadata description"
    name="twitter:description"
  />,
  <meta
    content="Stub para el alt de imagen"
    property="twitter:image:alt"
  />,
  <meta
    content="https://example.site.metadata/imageSourceStub"
    property="og:image"
  />,
  <meta
    content="https://example.site.metadata/imageSourceStub"
    property="twitter:image"
  />,
  <meta
    content="width=device-width, minimum-scale=1"
    name="viewport"
  />,
]
`;

exports[`Seo con titulo render Seo modelo blog 1`] = `
[
  <title>
    Blog post | Site metadata title
  </title>,
  <meta
    content="Site metadata description"
    name="description"
  />,
  <meta
    content="Blog post"
    property="og:title"
  />,
  <meta
    content="Site metadata description"
    property="og:description"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="Stub para el alt de imagen"
    property="og:image:alt"
  />,
  <meta
    content="summary"
    name="twitter:card"
  />,
  <meta
    content=""
    name="twitter:creator"
  />,
  <meta
    content="Blog post"
    name="twitter:title"
  />,
  <meta
    content="Site metadata description"
    name="twitter:description"
  />,
  <meta
    content="Stub para el alt de imagen"
    property="twitter:image:alt"
  />,
  <meta
    content="https://example.site.metadata/imageSourceStub"
    property="og:image"
  />,
  <meta
    content="https://example.site.metadata/imageSourceStub"
    property="twitter:image"
  />,
  <meta
    content="width=device-width, minimum-scale=1"
    name="viewport"
  />,
  <meta
    content="August 14, 2022"
    property="og:article:published_time"
  />,
]
`;

exports[`Seo con titulo render Seo solo titulo 1`] = `
[
  <title>
    Solo titulo | Site metadata title
  </title>,
  <meta
    content="Site metadata description"
    name="description"
  />,
  <meta
    content="Solo titulo"
    property="og:title"
  />,
  <meta
    content="Site metadata description"
    property="og:description"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="Site metadata description"
    property="og:image:alt"
  />,
  <meta
    content="summary"
    name="twitter:card"
  />,
  <meta
    content=""
    name="twitter:creator"
  />,
  <meta
    content="Solo titulo"
    name="twitter:title"
  />,
  <meta
    content="Site metadata description"
    name="twitter:description"
  />,
  <meta
    content="Site metadata description"
    property="twitter:image:alt"
  />,
  <meta
    content="width=device-width, minimum-scale=1"
    name="viewport"
  />,
]
`;
